--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.1.1" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="portable-net45+wp80+win+MonoAndroid10+MonoTouch10" />
