--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -34,7 +34,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\HttpClientExtensions.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
-    <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Services\DirectoryService.cs" />
     <Compile Include="Pages\DirectoryPage.xaml.cs">
@@ -46,6 +45,7 @@
     <Compile Include="ViewModels\ChatPageViewModel.cs" />
     <Compile Include="Services\SignalRService.cs" />
     <Compile Include="Models\SignalRMessage.cs" />
+    <Compile Include="ViewModels\DirectoryViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.2.2.6243\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.2.2.6243\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets')" />
